--- a/Praticascreem/View/MostrarUsuarios.xaml
+++ b/Praticascreem/View/MostrarUsuarios.xaml
@@ -1,30 +1,108 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:d="http://xamarin.com/schemas/2014/forms/design"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             mc:Ignorable="d"
              x:Class="Praticascreem.View.MostrarUsuarios" BackgroundColor="white">
     <ContentPage.Content>
-        <StackLayout Margin="0,30,0,0">
-            <Label Text="Lista de Usuarios" FontSize="25"
-                  TextColor="Green"
-                  HorizontalOptions="CenterAndExpand"/>
-            <ListView ItemsSource="{Binding ListViewSource}" HasUnevenRows="True" IsPullToRefreshEnabled="True" IsRefreshing="{Binding IsRefreshing}" x:Name="ListViewName">
-                <ListView.ItemTemplate>
-                    <DataTemplate>
-                        <ViewCell>
-                            <StackLayout>
-                                <Label Text="{Binding Email}"/>
-                                <Label Text="{Binding Password}"/>
-                                <Label Text="{Binding Nombre}"/>
-                                <Label Text="{Binding Edad}"/>
-                            </StackLayout>
-                        </ViewCell>
-                    </DataTemplate>
-                </ListView.ItemTemplate>
-            </ListView>
 
-            <StackLayout Margin="30" VerticalOptions="CenterAndExpand">
-                
-            </StackLayout>
+
+        <StackLayout>
+
+
+            <Grid>
+
+                <Grid.RowDefinitions>
+
+                    <RowDefinition Height="40"></RowDefinition>
+                    <RowDefinition Height="40"></RowDefinition>
+                    <RowDefinition Height="40"></RowDefinition>
+                    <RowDefinition Height="10"></RowDefinition>
+                    <RowDefinition Height="*"></RowDefinition>
+                    
+                </Grid.RowDefinitions>
+               
+                <Label Text="User Profile" Grid.Row="0" FontAttributes="Bold" FontSize="Large" HorizontalOptions="CenterAndExpand"/>
+
+                <StackLayout Grid.Row="1">
+                   
+                    <Button x:Name="btnSkillPopup" Text="Add Skill"></Button>
+               
+                </StackLayout>
+
+                <Grid Grid.Row = "2" VerticalOptions="CenterAndExpand" Margin="10" Padding="10">
+
+                    <Grid.RowDefinitions>
+
+                        <RowDefinition Height="30"/>
+
+                    </Grid.RowDefinitions>
+
+                    <Grid.ColumnDefinitions>
+
+                        <ColumnDefinition Width="3*"/>
+                        <ColumnDefinition Width="2*"/>
+                        <ColumnDefinition Width="2.5*"/>
+                        <ColumnDefinition Width="1*"/>
+                        <ColumnDefinition Width="1.5*"/>
+
+                    </Grid.ColumnDefinitions>
+
+                    <Label Text="Email" Grid.Column="0" Grid.Row="0" Style="{DynamicResource headerTablet}"/>
+                    <Label Text="Password" Grid.Column="1" Grid.Row="0" Style="{DynamicResource headerTablet}"/>
+                    <Label Text="Nombre" Grid.Column="2" Grid.Row="0" Style="{DynamicResource headerTablet}"/>
+                    <Label Text="Editar" Grid.Column="3" Grid.Row="0" Style="{DynamicResource headerTablet}"/>
+                    <Label Text="Eliminar" Grid.Column="4" Grid.Row="0" Style="{DynamicResource headerTablet}"/>
+                    <BoxView Grid.Row="3" HorizontalOptions="FillAndExpand" VerticalOptions="Center"
+ HeightRequest="2" BackgroundColor="DarkGray"></BoxView>
+
+                    <ListView IsPullToRefreshEnabled="True" x:Name="lstUserSkills" Grid.Row="4" ItemsSource="{Binding }" Margin="4">
+
+                        <ListView.ItemTemplate>
+                            <DataTemplate>
+                                <ViewCell>
+
+                                    <Grid VerticalOptions="CenterAndExpand" Background="white" ColumnSpacing="0">
+
+
+                                        <Grid.RowDefinitions>
+                                        
+                                            <RowDefinition Height="40"/>
+                                        
+                                        </Grid.RowDefinitions>
+
+                                        <Grid.ColumnDefinitions>
+
+                                            <ColumnDefinition Width="3*"/>
+                                            <ColumnDefinition Width="2*"/>
+                                            <ColumnDefinition Width="3*"/>
+                                            <ColumnDefinition Width="1*"/>
+                                            <ColumnDefinition Width="1*"/>
+
+                                        </Grid.ColumnDefinitions>
+
+                                        <Label Text="{Binding ,Mode=TwoWay}" Grid.Column="0" Grid.Row="0" Style="{DynamicResource detailTablet}"/>
+                                        <Label Text="{Binding ,Mode=TwoWay}" Grid.Column="1" Grid.Row="0" Style="{DynamicResource detailTablet}"/>
+                                        <Label Text="{Binding ,Mode=TwoWay}" Grid.Column="2" Grid.Row="0" Style="{DynamicResource detailTablet}"/>
+
+
+
+
+
+                                    </Grid>
+                                </ViewCell>
+                            </DataTemplate>
+                        </ListView.ItemTemplate>
+                        
+                        
+                    </ListView>
+                    
+                </Grid>
+                    
+              
+            </Grid>
+            
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
