--- a/Praticascreem/View/MostrarUsuarios.xaml
+++ b/Praticascreem/View/MostrarUsuarios.xaml
@@ -41,10 +41,10 @@
 
                     <Grid.ColumnDefinitions>
 
-                        <ColumnDefinition Width="3*"/>
                         <ColumnDefinition Width="2*"/>
-                        <ColumnDefinition Width="2.5*"/>
-                        <ColumnDefinition Width="1*"/>
+                        <ColumnDefinition Width="2*"/>
+                        <ColumnDefinition Width="2*"/>
+                        <ColumnDefinition Width="1.5*"/>
                         <ColumnDefinition Width="1.5*"/>
 
                     </Grid.ColumnDefinitions>
@@ -57,7 +57,7 @@
                     <BoxView Grid.Row="3" HorizontalOptions="FillAndExpand" VerticalOptions="Center"
  HeightRequest="2" BackgroundColor="DarkGray"></BoxView>
 
-                    <ListView IsPullToRefreshEnabled="True" x:Name="lstUserSkills" Grid.Row="4" ItemsSource="{Binding }" Margin="4">
+                    <ListView IsPullToRefreshEnabled="True" x:Name="lstUserSkills" Grid.Row="4" ItemsSource="{Binding ListViewSource }" Margin="4">
 
                         <ListView.ItemTemplate>
                             <DataTemplate>
@@ -81,13 +81,34 @@
                                             <ColumnDefinition Width="1*"/>
 
                                         </Grid.ColumnDefinitions>
+                                        
+                                        <Label Text="{Binding Email,Mode=TwoWay}" Grid.Column="0" Grid.Row="0" Style="{DynamicResource detailTablet}"/>
+                                        <Label Text="{Binding Password, Mode=TwoWay}" Grid.Column="1" Grid.Row="0" Style="{DynamicResource detailTablet}"/>
+                                        <Label Text="{Binding Nombre, Mode=TwoWay}" Grid.Column="2" Grid.Row="0" Style="{DynamicResource detailTablet}"/>
 
-                                        <Label Text="{Binding ,Mode=TwoWay}" Grid.Column="0" Grid.Row="0" Style="{DynamicResource detailTablet}"/>
-                                        <Label Text="{Binding ,Mode=TwoWay}" Grid.Column="1" Grid.Row="0" Style="{DynamicResource detailTablet}"/>
-                                        <Label Text="{Binding ,Mode=TwoWay}" Grid.Column="2" Grid.Row="0" Style="{DynamicResource detailTablet}"/>
+
+                                        <Image x:Name="EditSkill" HorizontalOptions="Start" Grid.Column="3" Grid.Row="0" Source="editar.PNG" HeightRequest="20" WidthRequest="20" Style="{DynamicResource ImgTablet}">
+
+                                            <Image.GestureRecognizers>
+                                                <TapGestureRecognizer NumberOfTapsRequired="1">
+                                                    
+                                                </TapGestureRecognizer>
+                                            </Image.GestureRecognizers>
+                                            
+                                        </Image>
 
 
 
+
+                                        <Image x:Name="DeleteSkill" HorizontalOptions="Start" Grid.Column="4" Grid.Row="0" Source="remove.PNG" HeightRequest="20" WidthRequest="20" Style="{DynamicResource ImgTablet}">
+
+                                            <Image.GestureRecognizers>
+                                                <TapGestureRecognizer NumberOfTapsRequired="1">
+
+                                                </TapGestureRecognizer>
+                                            </Image.GestureRecognizers>
+
+                                        </Image>
 
 
                                     </Grid>
