--- a/Praticascreem/HeaderContentView.xaml
+++ b/Praticascreem/HeaderContentView.xaml
@@ -22,21 +22,16 @@
                 <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
 
-            <Image Aspect="AspectFill" Source="gradiente.jpg" Grid.ColumnSpan="5" Grid.RowSpan="4" Opacity="0.6"/>
-            <Image Source="Usericon.png" HeightRequest="80" WidthRequest="80"
- Grid.Column="1" Grid.Row="1" HorizontalOptions="Start" VerticalOptions="End"/>
 
-            <StackLayout VerticalOptions="CenterAndExpand" Grid.Row="1" Margin="10,0,0,0" Grid.Column="2" Grid.ColumnSpan="3" Orientation="Vertical">
+            <Image Aspect="AspectFill" Source="gradient.jpeg" Grid.ColumnSpan="5" Grid.RowSpan="4" Opacity="0.6" />
+            <Image Source="userimage.png" HeightRequest="80" WidthRequest="80" Grid.Column="1"  Grid.Row="1" HorizontalOptions="Start" VerticalOptions="End"/>
 
-                <Label HorizontalTextAlignment="Start"
- VerticalTextAlignment="Center" TextColor="white" Text="Bulmatic Colombia"/>
+            <StackLayout VerticalOptions="CenterAndExpand" Grid.Row="1" Margin="10,0,0,0"
+            Grid.Column="2" Grid.ColumnSpan="3" Orientation="Vertical">
+                <Label HorizontalTextAlignment="Start" VerticalTextAlignment="Center" TextColor="White" Text="Hola mundo"/>
 
-                <Label HorizontalTextAlignment="Start"
- VerticalTextAlignment="Center" TextColor="white" Text="some@hotmail.com"/>
-
+                <Label  HorizontalTextAlignment="Start" VerticalTextAlignment="Center" TextColor="White" Text="something@gmail.com"/>
             </StackLayout>
-
-
         </Grid>
-  </ContentView.Content>
+    </ContentView.Content>
 </ContentView>
