--- a/Praticascreem/Paginaprincipal.xaml
+++ b/Praticascreem/Paginaprincipal.xaml
@@ -3,17 +3,30 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
        xmlns:local="clr-namespace:Praticascreem"
              x:Class="Praticascreem.Paginaprincipal">
+    
     <Shell.FlyoutHeader>
         <local:HeaderContentview/>
     </Shell.FlyoutHeader>
-    
+
     <FlyoutItem Title="MyTabApp"
                 Shell.TabBarIsVisible="False"
                 FlyoutDisplayOptions="AsMultipleItems">
-        <ShellContent Title="Bears" Icon="usericon.png" IsTabStop="True" ContentTemplate="{DataTemplate local:Pagina1}"/>
-        <ShellContent Title="Bears" Icon="Usericon.png" IsTabStop="True" ContentTemplate="{DataTemplate local:Pagina2}"/>
-        
+        <Tab Icon="ic_action_build.png" Title="Bears">
+            
+            <ShellContent ContentTemplate="{DataTemplate local:Pagina1}"/>
+        </Tab>
+
     </FlyoutItem>
 
-    <ShellContent Title="About" Icon="usericon.png" ContentTemplate="{DataTemplate local:Pagina1}"/>
+    <FlyoutItem Title="MyTabApp"
+               Shell.TabBarIsVisible="False"
+               FlyoutDisplayOptions="AsMultipleItems">
+
+        <Tab Icon="ic_action_build.png" Title="Elephants">
+            <ShellContent ContentTemplate="{DataTemplate local:Pagina2}"/>
+        </Tab>
+
+    </FlyoutItem>
+
+    <ShellContent Title="About" Icon="ic_action_build.png" ContentTemplate="{DataTemplate local:Pagina1}"/>
 </Shell>
