--- a/Praticascreem/View/MostrarUsuarios.xaml
+++ b/Praticascreem/View/MostrarUsuarios.xaml
@@ -11,113 +11,72 @@
         <StackLayout>
             <Label Text="Mostrar Datos Usuarios"></Label>
 
-            <Grid>
 
-                <Grid.RowDefinitions>
-
-                    <RowDefinition Height="40"></RowDefinition>
-                    <RowDefinition Height="40"></RowDefinition>
-                    <RowDefinition Height="40"></RowDefinition>
-                    <RowDefinition Height="10"></RowDefinition>
-                    <RowDefinition Height="*"></RowDefinition>
-                    
-                </Grid.RowDefinitions>
-               
-           
-
-                <Grid Grid.Row = "2" VerticalOptions="CenterAndExpand" Margin="10" Padding="10">
-
-                    <Grid.RowDefinitions>
-
-                        <RowDefinition Height="30"/>
-
-                    </Grid.RowDefinitions>
-
-                    <Grid.ColumnDefinitions>
-
-                        <ColumnDefinition Width="2*"/>
-                        <ColumnDefinition Width="2*"/>
-                        <ColumnDefinition Width="2*"/>
-                        <ColumnDefinition Width="1.5*"/>
-                        <ColumnDefinition Width="1.5*"/>
-
-                    </Grid.ColumnDefinitions>
-
-                    <Label Text="Email" Grid.Column="0" Grid.Row="0" Style="{DynamicResource headerTablet}"/>
-                    <Label Text="Password" Grid.Column="1" Grid.Row="0" Style="{DynamicResource headerTablet}"/>
-                    <Label Text="Nombre" Grid.Column="2" Grid.Row="0" Style="{DynamicResource headerTablet}"/>
-                    <Label Text="Editar" Grid.Column="3" Grid.Row="0" Style="{DynamicResource headerTablet}"/>
-                    <Label Text="Eliminar" Grid.Column="4" Grid.Row="0" Style="{DynamicResource headerTablet}"/>
-                    <BoxView Grid.Row="3" HorizontalOptions="FillAndExpand" VerticalOptions="Center"
- HeightRequest="2" BackgroundColor="DarkGray"></BoxView>
-
-                    <ListView IsPullToRefreshEnabled="True" x:Name="lstUserSkills" Grid.Row="4" ItemsSource="{Binding ListViewSource }" Margin="4">
-
-                        <ListView.ItemTemplate>
-                            <DataTemplate>
-                                <ViewCell>
-
-                                    <Grid VerticalOptions="CenterAndExpand" Background="white" ColumnSpacing="0">
+            <Grid VerticalOptions="CenterAndExpand" Background="white" ColumnSpacing="0">
 
 
-                                        <Grid.RowDefinitions>
-                                        
-                                            <RowDefinition Height="40"/>
-                                        
-                                        </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="2*"/>
+                    <ColumnDefinition Width="2*"/>
+                    <ColumnDefinition Width="2*"/>
+                    <ColumnDefinition Width="2*"/>
+                    <ColumnDefinition Width="2*"/>
+                    <ColumnDefinition Width="2*"/>
 
-                                        <Grid.ColumnDefinitions>
+                </Grid.ColumnDefinitions>
 
-                                            <ColumnDefinition Width="3*"/>
-                                            <ColumnDefinition Width="2*"/>
-                                            <ColumnDefinition Width="3*"/>
-                                            <ColumnDefinition Width="1*"/>
-                                            <ColumnDefinition Width="1*"/>
-
-                                        </Grid.ColumnDefinitions>
-                                        
-                                        <Label Text="{Binding Email,Mode=TwoWay}" Grid.Column="0" Grid.Row="0" Style="{DynamicResource detailTablet}"/>
-                                        <Label Text="{Binding Password, Mode=TwoWay}" Grid.Column="1" Grid.Row="0" Style="{DynamicResource detailTablet}"/>
-                                        <Label Text="{Binding Nombre, Mode=TwoWay}" Grid.Column="2" Grid.Row="0" Style="{DynamicResource detailTablet}"/>
+                <Label Text="Email" Grid.Column="0" Grid.Row="0" Style="{DynamicResource headerTablet}"/>
+                <Label Text="Password" Grid.Column="1" Grid.Row="0" Style="{DynamicResource headerTablet}"/>
+                <Label Text="Nombre" Grid.Column="2" Grid.Row="0" Style="{DynamicResource headerTablet}"/>
+                <Label Text="Edad" Grid.Column="3" Grid.Row="0" Style="{DynamicResource headerTablet}"/>
+                <Label Text="Editar" Grid.Column="4" Grid.Row="0" Style="{DynamicResource headerTablet}"/>
+                <Label Text="Eliminar" Grid.Column="5" Grid.Row="0" Style="{DynamicResource headerTablet}"/>
 
 
-                                        <Image x:Name="EditSkill" HorizontalOptions="Start" Grid.Column="3" Grid.Row="0" Source="editar.PNG" HeightRequest="20" WidthRequest="20" Style="{DynamicResource ImgTablet}">
-
-                                            <Image.GestureRecognizers>
-                                                <TapGestureRecognizer NumberOfTapsRequired="1">
-                                                    
-                                                </TapGestureRecognizer>
-                                            </Image.GestureRecognizers>
-                                            
-                                        </Image>
-
-
-
-
-                                        <Image x:Name="DeleteSkill" HorizontalOptions="Start" Grid.Column="4" Grid.Row="0" Source="remove.PNG" HeightRequest="20" WidthRequest="20" Style="{DynamicResource ImgTablet}">
-
-                                            <Image.GestureRecognizers>
-                                                <TapGestureRecognizer NumberOfTapsRequired="1">
-
-                                                </TapGestureRecognizer>
-                                            </Image.GestureRecognizers>
-
-                                        </Image>
-
-
-                                    </Grid>
-                                </ViewCell>
-                            </DataTemplate>
-                        </ListView.ItemTemplate>
-                        
-                        
-                    </ListView>
-                    
-                </Grid>
-                    
-              
             </Grid>
+
+
+
+
+            <BoxView></BoxView>
             
+
+                <ListView IsPullToRefreshEnabled="True" x:Name="lstUserSkills" Grid.Row="4" ItemsSource="{Binding ListViewSource }" Margin="4">
+
+                    <ListView.ItemTemplate>
+                        <DataTemplate>
+                            <ViewCell>
+
+
+                            <Grid VerticalOptions="CenterAndExpand" Background="white" ColumnSpacing="0">
+
+                                <Grid.ColumnDefinitions>
+
+                                    <ColumnDefinition Width="3*"/>
+                                    <ColumnDefinition Width="3*"/>
+                                    <ColumnDefinition Width="3*"/>
+                                    <ColumnDefinition Width="3*"/>
+                                    <ColumnDefinition Width="3*"/>
+
+                                </Grid.ColumnDefinitions>
+
+
+                                <Label Text="{Binding Email,Mode=TwoWay}" Grid.Column="0" Grid.Row="0" Style="{DynamicResource detailTablet}"/>
+                                <Label Text="{Binding Password, Mode=TwoWay}" Grid.Column="1" Grid.Row="0" Style="{DynamicResource detailTablet}"/>
+                                <Label Text="{Binding Nombre, Mode=TwoWay}" Grid.Column="2" Grid.Row="0" Style="{DynamicResource detailTablet}"/>
+
+
+                            </Grid>
+                                
+                                
+                                
+                            </ViewCell>
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+
+                </ListView>
+
+
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
