--- a/Praticascreem/View/CarrosPage.xaml
+++ b/Praticascreem/View/CarrosPage.xaml
@@ -2,6 +2,19 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Praticascreem.View.CarrosPage">
+    <NavigationPage.TitleView>
+        <StackLayout
+          Orientation="Horizontal"
+          VerticalOptions="Center"
+          Spacing="10">
+
+            <Label
+               Text="Registrar Carge"
+               FontSize="18"
+               TextColor="White"
+               VerticalTextAlignment="Center" />
+        </StackLayout>
+    </NavigationPage.TitleView>
     <ContentPage.Content>
 
 
@@ -9,9 +22,9 @@
 
 
 
-            <StackLayout BackgroundColor="#ffffff"  HorizontalOptions="CenterAndExpand" Padding="30">
-                
-                <Label Text="Registro" FontSize="Large" HorizontalOptions="Center" FontAttributes="Bold" TextColor="Gray"/>
+            <StackLayout BackgroundColor="#ffffff"  HorizontalOptions="CenterAndExpand" Padding="1">
+
+                <Label Text="REGISTRO CARGE  BIOFILM S.A ." FontSize="20" HorizontalOptions="Center" FontAttributes="Bold" TextColor="Gray" Padding="1"/>
 
 
                 <Label Text="Nombre"/>
@@ -34,12 +47,14 @@
                 <Button x:Name="btnTomarFoto" Text="Tomar Foto" Clicked="btnTomarFoto_Clicked"/>
 
                 <Image x:Name="photoseleccionar"/>
-                <Button x:Name="btnSeleccionarFoto" Text="Seleccionar Foto" Clicked="btnSeleccionarFoto_Clicked"/>
+
+                <Label Text="Insertar Imagen" FontSize="17"></Label>
+                <Button   x:Name="btnSeleccionarFoto" Text="Insertar imagen" Clicked="btnSeleccionarFoto_Clicked"/>
 
 
 
 
-                <StackLayout Margin="40" Orientation="Horizontal" VerticalOptions="CenterAndExpand">
+                <StackLayout Margin="30.0">
                     <Button Text="Registrar" BackgroundColor="#17a2b8" TextColor="White" BorderRadius="23" HorizontalOptions="FillAndExpand" Command="{Binding RegistroCommand}" Clicked="limpiarEntry_Clicked"/>
                     <Button Text="Limpiar" BackgroundColor="#007bff" TextColor="White" BorderRadius="23" HorizontalOptions="FillAndExpand" Command="{Binding RegistroCommand}" Clicked="limpiarEntry_Clicked" />
                 </StackLayout>
