--- a/Praticascreem/View/EditarPage.xaml
+++ b/Praticascreem/View/EditarPage.xaml
@@ -9,7 +9,7 @@
           Spacing="10">
 
             <Label
-               Text="Editar Pagina"
+               Text="ACTUALIZAR DATOS"
                FontSize="18"
                TextColor="White"
                VerticalTextAlignment="Center" />
@@ -22,7 +22,7 @@
                 <StackLayout  BackgroundColor="#ffffff"  HorizontalOptions="CenterAndExpand" Padding="10">
 
 
-                    <Label Text="Actualizar Nuevo Usuario" FontSize="Medium" FontAttributes="Bold" HorizontalOptions="Center" TextColor="gray" Margin="30"/>
+                    <Label Text="ACTUALIZAR DATOS  USUARIOS" FontSize="Medium" FontAttributes="Bold" HorizontalOptions="Center" TextColor="gray" Margin="30"/>
 
 
 
@@ -56,7 +56,7 @@
                     <!--        <ActivityIndicator x:Name="indi" IsRunning="False" IsEnabled="False" IsVisible="False"  Color="#FF5733" BackgroundColor="Transparent"></ActivityIndicator>
                           -->
 
-                    <StackLayout Margin="30.0" Orientation="Horizontal" VerticalOptions="CenterAndExpand" Padding="0">
+                    <StackLayout Margin="30.0">
 
 
 
