--- a/Praticascreem/View/RegisterPage.xaml
+++ b/Praticascreem/View/RegisterPage.xaml
@@ -10,7 +10,7 @@
           Spacing="10">
 
             <Label
-               Text="Registrar Tolba"
+               Text="Registrar Nuevo Usuario"
                FontSize="18"
                TextColor="White"
                VerticalTextAlignment="Center" />
