--- a/Praticascreem/View/Starpage.xaml
+++ b/Praticascreem/View/Starpage.xaml
@@ -5,6 +5,19 @@
             x:Class="Praticascreem.View.Starpage"
            
              BackgroundColor="White">
+    <NavigationPage.TitleView>
+        <StackLayout
+          Orientation="Horizontal"
+          VerticalOptions="Center"
+          Spacing="10">
+
+            <Label
+               Text="Bulkmatic Colombia"
+               FontSize="18"
+               TextColor="White"
+               VerticalTextAlignment="Center" />
+        </StackLayout>
+    </NavigationPage.TitleView>
     <ContentPage.Content>
         <StackLayout VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand">
             <ScrollView>
