--- a/Praticascreem/View/CarrosPage.xaml
+++ b/Praticascreem/View/CarrosPage.xaml
@@ -43,18 +43,19 @@
                 <Label Text="Edad"/>
                 <Entry x:Name="EdadTxt" Keyboard="Numeric" Placeholder="Digite su Edad" Text="{Binding EdadTxt}"/>
 
+                <Label Text="TOMAR FOTOGRAFIA" FontSize="20" FontAttributes="Bold" HorizontalTextAlignment="Center" VerticalTextAlignment="Center"></Label>
                 <Image x:Name="Photo"/>
                 <Button x:Name="btnTomarFoto" Text="Tomar Foto" Clicked="btnTomarFoto_Clicked"/>
 
                 <Image x:Name="photoseleccionar"/>
 
-                <Label Text="Insertar Imagen" FontSize="17"></Label>
-                <Button   x:Name="btnSeleccionarFoto" Text="Insertar imagen" Clicked="btnSeleccionarFoto_Clicked"/>
+                <Label Text="INSERTAR IMAGEN" FontSize="20" FontAttributes="Bold" HorizontalTextAlignment="Center" VerticalTextAlignment="Center"></Label>
+                <Button ImageSource="insertarimagen.png" WidthRequest="40" HeightRequest="40"  x:Name="btnSeleccionarFoto"  BackgroundColor="Transparent" Margin="10" Text="" Clicked="btnSeleccionarFoto_Clicked"/>
 
 
 
 
-                <StackLayout Margin="30.0">
+                <StackLayout Margin="30">
                     <Button Text="Registrar" BackgroundColor="#17a2b8" TextColor="White" BorderRadius="23" HorizontalOptions="FillAndExpand" Command="{Binding RegistroCommand}" Clicked="limpiarEntry_Clicked"/>
                     <Button Text="Limpiar" BackgroundColor="#007bff" TextColor="White" BorderRadius="23" HorizontalOptions="FillAndExpand" Command="{Binding RegistroCommand}" Clicked="limpiarEntry_Clicked" />
                 </StackLayout>
